--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,20 @@
   <artifactId>ProyectoFinal</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Proyecto_EscuelaLatinoamericana</name>
+ <dependencies>
+  <dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.4.2</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.12.4</version>
+    <scope>test</scope>
+  </dependency>
+ 
+ </dependencies>
+  
 </project>
